--- a/src/index.html
+++ b/src/index.html
@@ -34,17 +34,17 @@
                 <span class="u-visually-hidden">RAE Framework</span>
             </a>
         </div>
-        <nav class="nav nav--primary nav--responsive" role="navigation">
+        <nav class="nav nav--primary nav--responsive js-responsive-nav" role="navigation">
             <ul class="nav__list">
-                <li class="nav-item">
-                    <a href="styleguide/index.html">Visual Style Guide &amp; Documentation</a>
+                <li class="nav__item">
+                    <a href="styleguide/index.html" class="nav__link">Visual Style Guide &amp; Documentation</a>
                 </li>
-                <li class="nav-item">
-                    <a href="http://www.rae.fi">RAE Framework</a>
-                    <ul class="dropdown">
-                        <li class="nav-item"><a href="http://www.rae.fi">Just a subnav</a>
+                <li class="nav__item">
+                    <a href="http://www.rae.fi" class="nav__link">RAE Framework</a>
+                    <ul class="nav__list dropdown">
+                        <li class="nav__item" class="nav__link"><a href="http://www.rae.fi">Just a subnav</a>
                         </li>
-                        <li class="nav-item"><a href="http://www.rae.fi">Just a subnav</a>
+                        <li class="nav__item" class="nav__link"><a href="http://www.rae.fi">Just a subnav</a>
                         </li>
                     </ul>
                 </li>
@@ -52,7 +52,7 @@
         </nav>
     </header>
 
-    <main id="site-content" class="site-content" role="main">
+    <main id="content" class="content" role="main">
 
     </main>
 
