add hardware acceleration for animations

--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -160,21 +160,21 @@
             width: 100%;
         }
 
-        .docs-content .animation.animation-reset:before {
-            display: none;
-        }
-
-        .docs-content .animation.animation-reset .animated {
-            -webkit-animation: animation-reset;
-            animation: animation-reset;
-        }
-
         .docs-content .animation > div {
             text-align: center;
             display: block;
             height: 1rem;
             width: 100px;
             margin: 0 auto 1rem auto;
+        }
+
+        .docs-content .animation-reset:before {
+            display: none;
+        }
+
+        .docs-content .animation-reset .animated {
+            -webkit-animation: animation-reset;
+            animation: animation-reset;
         }
 
         .docs-content .dot,
@@ -2071,94 +2071,6 @@
                     <div class="row ">
                         <div class="column u-width-md-3of12">
                             <div class="animation animation-reset">
-                                <div class="bounce-in animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-in</code>
-                            </div>
-                        </div>
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-in-left animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-in-left</code>
-                            </div>
-                        </div>
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-in-up animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-in-up</code>
-                            </div>
-                        </div>
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-in-down animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-in-down</code>
-                            </div>
-                        </div>
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-in-right animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-in-right</code>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="well">
-                    <div class="row ">
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-out animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-out</code>
-                            </div>
-                        </div>
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-out-left animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-out-left</code>
-                            </div>
-                        </div>
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-out-up animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-out-up</code>
-                            </div>
-                        </div>
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-out-down animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-out-down</code>
-                            </div>
-                        </div>
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
-                                <div class="bounce-out-right animated">
-                                    <span class="dot">&nbsp;</span>
-                                </div>
-                                <code>.bounce-out-right</code>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="well">
-                    <div class="row ">
-                        <div class="column u-width-md-3of12">
-                            <div class="animation animation-reset">
                                 <div class="fade-in animated">
                                     <span class="dot">&nbsp;</span>
                                 </div>
@@ -2259,6 +2171,26 @@
                                     <span class="dot">&nbsp;</span>
                                 </div>
                                 <code>.zoom-out</code>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="well">
+                    <div class="row ">
+                        <div class="column u-width-md-3of12">
+                            <div class="animation animation-reset">
+                                <div class="bounce-in animated">
+                                    <span class="dot">&nbsp;</span>
+                                </div>
+                                <code>.bounce-in</code>
+                            </div>
+                        </div>
+                        <div class="column u-width-md-3of12">
+                            <div class="animation animation-reset">
+                                <div class="bounce-out animated">
+                                    <span class="dot">&nbsp;</span>
+                                </div>
+                                <code>.bounce-out</code>
                             </div>
                         </div>
                     </div>
