--- a/src/styleguide/icons-template.html
+++ b/src/styleguide/icons-template.html
@@ -1485,7 +1485,7 @@
                 <ul class="row">
                     <% _.each(glyphs, function(glyph) { %>
                         <li class="column u-width-sm-6of12 u-width-md-4of12 u-width-lg-3of12 u-width-xl-2of12">
-                            <i class="<%= className %> <%= className %>-<%= glyph.name %>"></i><span class="glyph-name"><%= glyph.name %></span>
+                            <i class="<%= className %> <%= className %>-<%= glyph.name %>"></i><span class="glyph-name"><%= glyph.name %></span><br />
                             <code class="glyph-class">.<%= className %>-<%= glyph.name %></code>
                             <div class="well magnify">
                                 <ul class="glyph-magnify">
