nav-responsive fixes and templates

--- a/src/styleguide/index.html
+++ b/src/styleguide/index.html
@@ -331,31 +331,37 @@
                 </header>
                 <article>
                     <h1>One Morning, When Gregor Samsa Woke</h1>
+                    <p class="lead">Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget.</p>
                     <p>From troubled dreams, he found himself <a href="#">transformed</a> in his bed into a horrible vermin. He lay on his <strong>armour-like back</strong>, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
                     <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. <em>“What’s happened to me?”</em> he thought. It wasn’t a dream. His room, a proper human room although <small>a little too small</small>, lay peacefully between its four familiar walls.</p>
                 </article>
                 <article>
                     <h2>One Morning, When Gregor Samsa Woke</h2>
+                    <p class="lead">Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget.</p>
                     <p>From troubled dreams, he found himself <a href="#">transformed</a> in his bed into a horrible vermin. He lay on his <strong>armour-like back</strong>, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
                     <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. <em>“What’s happened to me?”</em> he thought. It wasn’t a dream. His room, a proper human room although <small>a little too small</small>, lay peacefully between its four familiar walls.</p>
                 </article>
                 <article>
                     <h3>One Morning, When Gregor Samsa Woke</h3>
+                    <p class="lead">Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget.</p>
                     <p>From troubled dreams, he found himself <a href="#">transformed</a> in his bed into a horrible vermin. He lay on his <strong>armour-like back</strong>, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
                     <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. <em>“What’s happened to me?”</em> he thought. It wasn’t a dream. His room, a proper human room although <small>a little too small</small>, lay peacefully between its four familiar walls.</p>
                 </article>
                 <article>
                     <h4>One Morning, When Gregor Samsa Woke</h4>
+                    <p class="lead">Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget.</p>
                     <p>From troubled dreams, he found himself <a href="#">transformed</a> in his bed into a horrible vermin. He lay on his <strong>armour-like back</strong>, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
                     <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. <em>“What’s happened to me?”</em> he thought. It wasn’t a dream. His room, a proper human room although <small>a little too small</small>, lay peacefully between its four familiar walls.</p>
                 </article>
                 <article>
                     <h5>One Morning, When Gregor Samsa Woke</h5>
+                    <p class="lead">Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget.</p>
                     <p>From troubled dreams, he found himself <a href="#">transformed</a> in his bed into a horrible vermin. He lay on his <strong>armour-like back</strong>, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
                     <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. <em>“What’s happened to me?”</em> he thought. It wasn’t a dream. His room, a proper human room although <small>a little too small</small>, lay peacefully between its four familiar walls.</p>
                 </article>
                 <article>
                     <h6>One Morning, When Gregor Samsa Woke</h6>
+                    <p class="lead">Etiam at risus et justo dignissim congue. Donec congue lacinia dui, a porttitor lectus condimentum laoreet. Nunc eu ullamcorper orci. Quisque eget.</p>
                     <p>From troubled dreams, he found himself <a href="#">transformed</a> in his bed into a horrible vermin. He lay on his <strong>armour-like back</strong>, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. The bedding was hardly able to cover it and seemed ready to slide off any moment.</p>
                     <p>His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. <em>“What’s happened to me?”</em> he thought. It wasn’t a dream. His room, a proper human room although <small>a little too small</small>, lay peacefully between its four familiar walls.</p>
                 </article>
@@ -1144,10 +1150,10 @@
                     <h3 class="u-muted">Button styles</h3>
                 </header>
                 <div class="example">
-                    <button class="button" type="button">Button</button>
                     <button class="button button--default" type="button">Default Button</button>
                     <button class="button button--primary" type="button">Primary button</button>
                     <button class="button button--link" type="button">Link button</button>
+                    <button class="button button--default is-loading" type="button">Loading button</button>
                 </div>
             </article>
             <article class="buttons__states">
@@ -1179,6 +1185,26 @@
                 <div class="example">
                     <button class="button button--default button--pill" type="button">Pill</button>
                     <button class="button button--default button--circle" type="button">Circle</button>
+                </div>
+            </article>
+            <article class="buttons__group">
+                <header>
+                    <h3 class="u-muted">Button-group</h3>
+                </header>
+                <div class="example">
+                    <div class="button-group">
+                        <button class="button button--default" type="button">Button 1</button>
+                        <button class="button button--default" type="button">Button 2</button>
+                        <button class="button button--default" type="button">Button 3</button>
+                    </div>
+                </div>
+                <div class="example">
+
+                    <div class="button-group button-group--block">
+                        <button class="button button--default" type="button">Button 1</button>
+                        <button class="button button--default" type="button">Button 2</button>
+                        <button class="button button--default" type="button">Button 3</button>
+                    </div>
                 </div>
             </article>
         </section>
@@ -1444,6 +1470,20 @@
                 <div class="example">
                     <form role="form" class="form" action="">
                         <fieldset>
+                            <legend>Inline-field</legend>
+                            <div class="field field--inline">
+                                <label for="demo-input-field-inline1">Input</label>
+                                <input type="text" id="demo-input-field-inline1" placeholder="Type something...">
+                            </div>
+                            <div class="field field--inline">
+                                <label for="demo-input-field-inline2">Input</label>
+                                <input type="text" id="demo-input-field-inline2" placeholder="Type something...">
+                            </div>
+                        </fieldset>
+
+
+                        <fieldset>
+                            <legend>Field-group</legend>
                             <div class="field-group">
                                 <div class="field">
                                     <label for="demo-input-field1">Input</label>
@@ -1460,7 +1500,7 @@
                             </div>
                         </fieldset>
                         <fieldset>
-                            <legend>Equal width</legend>
+                            <legend>Field-groupd – Equal width</legend>
                             <div class="field-group field-group--equal-width">
                                 <div class="field">
                                     <label for="demo-input-equal1">Input</label>
@@ -1505,38 +1545,50 @@
                             </div>
                         </fieldset>
                         <fieldset>
-                            <legend>Inline</legend>
+                            <legend>Field-group – Inline</legend>
                             <div class="field-group field-group--inline">
                                 <div class="field">
-                                    <label for="demo-input-inline1">Input lorem</label>
+                                    <label class="u-text-nowrap" for="demo-input-inline1">Input lorem</label>
                                     <input type="text" id="demo-input-inline1" placeholder="Type something...">
                                 </div>
                                 <div class="field">
-                                    <label for="demo-input-inline2">Input</label>
+                                    <label class="u-hide" for="demo-input-inline2">Input</label>
                                     <input type="text" id="demo-input-inline2" placeholder="Type something...">
                                 </div>
                                 <button role="button" class="button button--primary">Button</button>
                             </div>
                         </fieldset>
                         <fieldset>
-                            <legend>Fields with widths</legend>
+                            <legend>Field-group – Fields with widths</legend>
+
                             <div class="field-group">
-                                <div class="field u-width-md-5of12">
+                                <div class="field u-width-md-3of12">
                                     <label>First name</label>
                                     <input type="text" placeholder="First Name">
                                 </div>
-                                <div class="field u-width-md-2of12">
+                                <div class="field u-width-md-3of12">
                                     <label>Middle</label>
                                     <input type="text" placeholder="Middle Name">
                                 </div>
-                                <div class="field u-width-md-5of12">
+                                <div class="field u-width-sm-auto">
                                     <label>Last name</label>
                                     <input type="text" placeholder="Last Name">
                                 </div>
                             </div>
-                            <div class="field-group field-group--equal-width">
+                            <div class="field-group">
+                                <div class="field u-width-md-2of12">
+                                    <input type="text" placeholder="Width 3of12">
+                                </div>
+                                <div class="field u-width-md-7of12">
+                                    <input type="text" placeholder="Width 7of12">
+                                </div>
+                                <div class="field u-width-md-auto">
+                                    <input type="text" placeholder="Width auto">
+                                </div>
+                            </div>
+                            <div class="field-group">
                                 <div class="field u-width-md-8of12">
-                                    <input type="text" id="demo-input-widths" placeholder="Type something...">
+                                    <input type="text" id="demo-input-widths" placeholder="Width 8of12">
 
                                 </div>
                                 <div class="field">
@@ -1946,25 +1998,25 @@
             <article class="addons__tooltips">
                 <header>
                     <h3 class="u-muted">Tooltips</h3>
-                    <p>Add tooltips built entirely in CSS to nearly any element. Use accessible <code>aria-label="<em>Tooltip content</em>"</code> attribute for tooltip content and <code>class="tooltip tooltip--top"</code> attributes. You can make tooltips multiline with additional <code>tooltip--multiline</code> class.
+                    <p>Add tooltips built entirely in CSS to nearly any element. Use accessible <code>data-tooltip="<em>Tooltip content</em>"</code> attribute for tooltip content and <code>class="tooltip tooltip--top"</code> attributes. You can make tooltips multiline with additional <code>tooltip--multiline</code> class.
                     </p>
                 </header>
                 <div class="well u-clearfix u-text-center example">
                     <div class="row">
                         <div class="column u-width-md-3of12">
-                            <a href="#" class="tooltip tooltip--top" aria-label="Top tooltip">&nbsp</a>
+                            <a href="#" class="tooltip tooltip--top" data-tooltip="Top tooltip">&nbsp</a>
                             <div>Tooltip top</div>
                         </div>
                         <div class="column u-width-md-3of12">
-                            <a href="#" class="tooltip tooltip--right" aria-label="Right tooltip">&nbsp</a>
+                            <a href="#" class="tooltip tooltip--right" data-tooltip="Right tooltip">&nbsp</a>
                             <div>Tooltip right</div>
                         </div>
                         <div class="column u-width-md-3of12">
-                            <a href="#" class="tooltip tooltip--bottom" aria-label="Bottom tooltip">&nbsp</a>
+                            <a href="#" class="tooltip tooltip--bottom" data-tooltip="Bottom tooltip">&nbsp</a>
                             <div>Tooltip bottom</div>
                         </div>
                         <div class="column u-width-md-3of12">
-                            <a href="#" class="tooltip tooltip--left" aria-label="Left tooltip">&nbsp</a>
+                            <a href="#" class="tooltip tooltip--left" data-tooltip="Left tooltip">&nbsp</a>
                             <div>Tooltip left</div>
                         </div>
                     </div>
@@ -1972,19 +2024,19 @@
                 <div class="well u-clearfix u-text-center example">
                     <div class="row">
                         <div class="column u-width-md-3of12">
-                            <a class="tooltip tooltip--top tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
+                            <a class="tooltip tooltip--top tooltip--multiline" data-tooltip="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
                             <div>Multiline top</div>
                         </div>
                         <div class="column u-width-md-3of12">
-                            <a href="#" class="tooltip tooltip--right tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
+                            <a href="#" class="tooltip tooltip--right tooltip--multiline" data-tooltip="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
                             <div>Multiline right</div>
                         </div>
                         <div class="column u-width-md-3of12">
-                            <a href="#" class="tooltip tooltip--bottom tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
+                            <a href="#" class="tooltip tooltip--bottom tooltip--multiline" data-tooltip="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
                             <div>Multiline bottom</div>
                         </div>
                         <div class="column u-width-md-3of12">
-                            <a href="#" class="tooltip tooltip--left tooltip--multiline" aria-label="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
+                            <a href="#" class="tooltip tooltip--left tooltip--multiline" data-tooltip="This is a multiline tooltip that fits longer sentences.">&nbsp</a>
                             <div>Multiline left</div>
                         </div>
                     </div>
@@ -1992,21 +2044,21 @@
                 <div class="well u-clearfix u-text-center example">
                     <div class="row">
                         <div class="column u-width-md-3of12">
-                            <a href="#" class="tooltip tooltip--top is-active" aria-label="Active tooltip">&nbsp</a>
+                            <a href="#" class="tooltip tooltip--top is-active" data-tooltip="Active tooltip">&nbsp</a>
                             <div>Active tooltip with <code>.is-active</code> class.</div>
                         </div>
                     </div>
                 </div>
             </article>
 
-            <article class="addons__spinner">
+            <article class="addons__loader">
                 <header>
-                    <h3 class="u-muted">Spinner</h3>
-                    <p>You can easily create a loading spinner by adding the <code>.spinner</code> class to an empty element.
+                    <h3 class="u-muted">Loader</h3>
+                    <p>You can easily create a loading spinner by adding the <code>.loader</code> class to an empty element. Or just add elements state <code>.is-loading</code>.
                     </p>
                 </header>
                 <div class="well u-text-center example">
-                    <div class="spinner"></div>
+                    <div class="loader"></div>
                 </div>
             </article>
             <article class="addons__animations">
