--- a/src/index.html
+++ b/src/index.html
@@ -34,14 +34,14 @@
                 <span class="u-visually-hidden">RAE Framework</span>
             </a>
         </div>
-        <nav class="nav nav--primary nav--responsive js-responsive-nav" role="navigation">
+        <nav class="nav nav--primary nav--responsive js-nav" role="navigation">
             <ul class="nav__list">
                 <li class="nav__item">
                     <a href="styleguide/index.html" class="nav__link">Visual Style Guide &amp; Documentation</a>
                 </li>
                 <li class="nav__item">
                     <a href="http://www.rae.fi" class="nav__link">RAE Framework</a>
-                    <ul class="nav__list dropdown">
+                    <ul class="nav__list nav__list--dropdown">
                         <li class="nav__item" class="nav__link"><a href="http://www.rae.fi">Just a subnav</a>
                         </li>
                         <li class="nav__item" class="nav__link"><a href="http://www.rae.fi">Just a subnav</a>
